[package]
name = "reqwest_select_url"
version = "0.1.0"
edition = "2021"

# 检查网页死链
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.10",features=["json"]}
tokio = { version="1.17.0", features=["full"]}
select = "0.5.0"
url = "2.2.2"

# 错误处理
error-chain = "0.12.4"